--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,13 @@
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf</artifactId>
             <version>3.5.4</version>
-            <scope>runtime</scope>
+            <type>jar</type>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf-extras</artifactId>
+            <version>3.5.4</version>
         </dependency>
         
         <dependency>
