--- a/wip-panel-lam-bai/pom.xml
+++ b/wip-panel-lam-bai/pom.xml
@@ -55,6 +55,16 @@
       <artifactId>opencsv</artifactId>
       <version>5.10</version>
     </dependency>
+    <dependency>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf</artifactId>
+      <version>3.1.3.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.17.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
