--- a/wip-panel-lam-bai/pom.xml
+++ b/wip-panel-lam-bai/pom.xml
@@ -65,6 +65,11 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.17.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20250107</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
