--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>school.thitracnghiem.ThiTracNghiem</exec.mainClass>
     </properties>
-    
+
     <dependencies>
         <dependency>
             <groupId>com.formdev</groupId>
@@ -32,11 +32,17 @@
             <version>1.18.36</version>
             <scope>provided</scope>
         </dependency>
-        
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.3</version> 
+        </dependency>
+
     </dependencies>
 </project>
